--- a/ders/02.html
+++ b/ders/02.html
@@ -23,12 +23,12 @@
 Hemen her ayette, vurgu ya da ahenk sebebiyle kelime sırası 
 düz cümle kalıbından farklı:</p>
 <pre>
-<a name="v=9:26&r=nzl">enzel</a>allâhu sekînetehû 'alâ rasûlih(i)
-<a name="v=6:54&r=ktb">ketebe</a> rabbukum 'alâ nefsihir-rahme(te)
-<a name="v=2:183&r=ktb">kutibe</a> 'aleykumus-siyâmu kemâ kutibe ...
-<a name="v=28:20&r=jyA">vecâe</a> raculun min aqsal-madîneti yes'â
-innâ <a name="v=43:3&r=jEl">ca'alnâhu</a> qur-ânen 'arabiyyen
-innâ <a name="v=97:1&r=nzl">enzelnâhu</a> fî leyletil-qadr(i)
+<a name="v=9:26&r=nzl">enzelallâhu sekînetehû 'alâ rasûlih</a>(i)
+<a name="v=6:54&r=ktb">ketebe rabbukum 'alâ nefsihir-rahme</a>(te)
+<a name="v=2:183&r=ktb">kutibe 'aleykumus-siyâmu kemâ kutibe</a> ...
+<a name="v=28:20&r=jyA">vecâe raculun min aqsal-madîneti yes'â</a>
+<a name="v=43:3&r=jEl">innâ ca'alnâhu qur-ânen 'arabiyyen</a>
+<a name="v=97:1&r=nzl">innâ enzelnâhu fî leyletil-qadr</a>(i)
 </pre>
 
 <h3>Şehadet</h3>
@@ -36,17 +36,17 @@ innâ <a name="v=97:1&r=nzl">enzelnâhu</a> fî leyletil-qadr(i)
 <p>Şehadet kelimeleri bir çok ayette haber olarak zikredilmiş:
 </p>
 <pre>
-<a name="v=20:14&r=Alh">lâ ilâhe</a> illâ ene    Ben
-<a name="v=21:87&r=Alh">lâ ilâhe</a> illâ ente   Sen
-<a name="v=3:18&r=Alh">lâ ilâhe</a> illâ hû     O
-<a name="v=37:35&r=Alh">lâ ilâhe</a> illallâh(u)
-muhammedun <a name="v=48:29&r=rsl">rasûlullah</a>(i)
+<a name="v=20:14&r=Alh">lâ ilâhe illâ ene</a>    Ben
+<a name="v=21:87&r=Alh">lâ ilâhe illâ ente</a>   Sen
+<a name="v=3:18&r=Alh">lâ ilâhe illâ hû</a>     O
+<a name="v=37:35&r=Alh">lâ ilâhe illallâh</a>(u)
+<a name="v=48:29&r=rsl">muhammedun rasûlullah</a>(i)
 </pre>
 
 <p>Bir ayette (münafıkların ağzından) yalan şehadet olarak geçer:
 </p>
 <pre>
-<a name="v=63:1&r=$hd">neşhedu</a> inneke lerasûlullah(i)
+<a name="v=63:1&r=$hd">neşhedu inneke lerasûlullah</a>(i)
 </pre>
   
 <h3>Tesbih</h3>
@@ -56,10 +56,10 @@ muhammedun <a name="v=48:29&r=rsl">rasûlullah</a>(i)
 </p>
 <pre>
 <a name="v=59:23&r=sbH">subhânallâh</a>(i)
-<a name="v=10:18&r=sbH">subhânehû</a> vete'âlâ
-<a name="v=17:1&r=sbH">subhânellezî</a> esrâ
-<a name="v=10:10&r=sbH">subhânek</a>allâhumme
-<a name="v=68:29&r=sbH">subhâne</a> rabbinâ
+<a name="v=10:18&r=sbH">subhânehû vete'âlâ</a> 
+<a name="v=17:1&r=sbH">subhânellezî esrâ</a>
+<a name="v=10:10&r=sbH">subhânekallâhumme</a>
+<a name="v=68:29&r=sbH">subhâne rabbinâ</a>
 
   rabb + î  -->  rabbî  = Rabbim
   <a name="v=56:96&r=EZm&r=sbH">el-'azîm</a> = ulu
@@ -75,9 +75,9 @@ Gece ve gündüzü, karanlık ve aydınlığı yaratana da,
 bize hidayet verene de hamd olsun:
 </p> 
 <pre>
-el-hamdu lillâh, ellezî <a name="v=6:1&r=xlq">halaqa</a>s-semâvâti vel-ard  
-el-hamdu lillâh, ellezî <a name="v=6:1&r=jEl">ca'ale</a>z-zulumâti ven-nûr  
-el-hamdu lillâh, ellezî <a name="v=7:43&r=hdy">hedânâ</a> lihâzâ
+el-hamdu lillâh, ellezî <a name="v=6:1&r=xlq">halaqas-semâvâti vel-ard</a>(a)
+el-hamdu lillâh, ellezî <a name="v=6:1&r=jEl">ca'alez-zulumâti ven-nûr</a>(a)
+el-hamdu lillâh, ellezî <a name="v=7:43&r=hdy">hedânâ lihâzâ</a>
 </pre>
 <br>
 
