--- a/ders/07.html
+++ b/ders/07.html
@@ -13,38 +13,43 @@
   <body>
 <h2>7. Fiil türetme &emsp; <button class=goBack>◀</button></h2>
 
-<p></p>
+<p>En az on bâbda, kurallı olarak yeni kelimeler yapılır.<br>
+"Arapça'nın en güzel konusudur" diyebiliriz</p>
 
-<h3></h3>
-En az on bâbda, kurallı olarak yeni kelimeler yapılır.
-
+<b>selime: teslîm, islâm</b> &emsp; (slm)
 <pre>
-'aleme: ta'lîm, i'lâm, ta'allum
-seleme: teslîm, islâm
-habere: muhâbere, ihbâr, istihbâr
-salaha: musâlaha, islâh
-harece: tahrîc, ihrâc, istihrâc
-</pre>
-"Arapça'nın en güzel konusu" diyebiliriz
-<p></p>
-<!-- 
-<p></p>
-<pre><a name="v=56:77&r=krm"></a>(un)
+<a name="v=26:89&r=slm">illâ men eta-llâhe biqalbin selîm</a>
+<a name="v=33:56&r=slm">sallû 'aleyhi vesellimû teslîmâ</a>
+<a name="v=2:131&r=slm">qâle eslemtu lirabbil-'âlemîn(e)</a>
 </pre>
 
-<h3></h3>
-
-<p></p>
-<pre><a name="v=3:95&r=Sdq"></a>(u)
+<b>suqiṭa: musāqaṭa, isqâṭ</b> &emsp; (sqT)
+<pre>
+<a name="v=6:59&r=sqT">vemâ tesqutu min varaqatin illâ ya'lemuhâ</a>
+<a name="v=26:187&r=sqT">feesqit 'aleynâ kisefen mines-semâi</a>
+<a name="v=52:44&r=sqT">vein yerev kisefen mines-semâi sâqitan</a>
 </pre>
 
-<h3></h3>
-
-<p></p>
-<pre><a name="v=48:10&r=ydy"></a>(i)
+<b>ḥasiba: muḥāsebe, iḥtisâb</b> &emsp; (Hsb)
+<pre>
+<a name="v=29:2&r=Hsb">ehasiben-nâsu ey-yutrakû</a>
+<a name="v=2:284&r=Hsb">yuhâsibkum bihi-llâh(u)</a>
+<a name="v=65:3&r=Hsb">veyerzuqhu min haysu lâ yahtesib</a>
 </pre>
-<p></p>
- -->
+
+<b>'alime: ta'lîm, ta'allum</b> &emsp; (Elm)
+<pre>
+<a name="v=2:32&r=Elm&r=sbH">lâ 'ilme lenâ illâ mâ 'allemtenâ</a>
+<a name="v=2:102&r=Elm&r=sHr">yu'allimûnen-nâses-sihr(e)</a>
+<a name="v=2:102&r=Elm&r=Drr">veyeta'allemûne mâ yadurruhum</a>
+</pre>
+
+<b>qadera: taqdîr, iqtidâr</b> &emsp; (qdr)
+<pre>
+<a name="v=77:23&r=qdr">feqadernâ feni'mel-qâdirûn(e)</a>
+<a name="v=25:2&r=qdr">vehalaqa kulle şey-in veqadderahû taqdîrâ</a>
+<a name="v=54:55&r=qdr">fî maq'adi sidqin 'inde melîkin muqtedir</a>
+</pre>
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
