--- a/ders/index.html
+++ b/ders/index.html
@@ -26,7 +26,7 @@
   <li><a href="07.html">Fiil türetme</a></li>
 </ol>
 
-<p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p>
+<!-- <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p> -->
 
 <a target="video"
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
