--- a/ders/index.html
+++ b/ders/index.html
@@ -23,7 +23,7 @@
   <li><a href=04.html>Tekil, ikil, çoğul</a></li>
   <li><a href="05.html">Sayılar</a></li>
   <li><a href="06.html">Fiil çekimi</a></li>
-  <li><a href="07.html">Fiil türetme</a></li>
+  <li><a href="07.html">Kelime türetme</a></li>
 </ol>
 
 <!-- <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p> -->
