--- a/ders/07.html
+++ b/ders/07.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-<h2>7. Fiil türetme &emsp; <button class=goBack>◀</button></h2>
+<h2>7. Kelime türetme &emsp; <button class=goBack>◀</button></h2>
 
 <p>En az on bâbda, kurallı olarak yeni kelimeler yapılır.<br>
 "Arapça'nın en güzel konusudur" diyebiliriz</p>
@@ -27,10 +27,10 @@
 <pre>
 <a name="v=6:59&r=sqT">vemâ tesqutu min varaqatin illâ ya'lemuhâ</a>
 <a name="v=26:187&r=sqT">feesqit 'aleynâ kisefen mines-semâi</a>
-<a name="v=52:44&r=sqT">vein yerev kisefen mines-semâi sâqitan</a>
+<a name="v=52:44&r=sqT">vein yerev kisfen mines-semâi sâqitan</a>
 </pre>
 
-<b>ḥasiba: muḥāsebe, iḥtisâb</b> &emsp; (Hsb)
+<b>ḥasibe: muḥāsebe, iḥtisâb</b> &emsp; (Hsb)
 <pre>
 <a name="v=29:2&r=Hsb">ehasiben-nâsu ey-yutrakû</a>
 <a name="v=2:284&r=Hsb">yuhâsibkum bihi-llâh(u)</a>
