translation and video

--- a/ders/07.html
+++ b/ders/07.html
@@ -19,44 +19,59 @@
 <b>selime: teslîm, islâm</b> &emsp; (slm)
 <pre>
 <a name="v=26:89&r=slm">illâ men eta-llâhe biqalbin selîm</a>
+Ancak Allah'a selim bir kalple gelenler 
 <a name="v=33:56&r=slm">sallû 'aleyhi vesellimû teslîmâ</a>
+Ona teslimiyetle salât ve selâm edin
 <a name="v=2:131&r=slm">qâle eslemtu lirabbil-'âlemîn(e)</a>
+"Alemlerin Rabbine teslim oldum" dedi
 </pre>
 
 <b>suqiṭa: musāqaṭa, isqâṭ</b> &emsp; (sqT)
 <pre>
 <a name="v=6:59&r=sqT">vemâ tesqutu min varaqatin illâ ya'lemuhâ</a>
+bir yaprak düşmez ki, onu (Allah) bilmesin
 <a name="v=26:187&r=sqT">feesqit 'aleynâ kisefen mines-semâi</a>
+"üstümüze gökten bir parça düşürüver"
 <a name="v=52:44&r=sqT">vein yerev kisfen mines-semâi sâqitan</a>
+Gökten bir parça düştüğünü görseler...
 </pre>
 
 <b>ḥasibe: muḥāsebe, iḥtisâb</b> &emsp; (Hsb)
 <pre>
 <a name="v=29:2&r=Hsb">ehasiben-nâsu ey-yutrakû</a>
+İnsanlar bırakılacaklarını mı sandılar?
 <a name="v=2:284&r=Hsb">yuhâsibkum bihi-llâh(u)</a>
+Allah onunla sizi hesaba çeker
 <a name="v=65:3&r=Hsb">veyerzuqhu min haysu lâ yahtesib</a>
+ve onu ummadığı yerden rızıklandırır
 </pre>
 
 <b>'alime: ta'lîm, ta'allum</b> &emsp; (Elm)
 <pre>
 <a name="v=2:32&r=Elm&r=sbH">lâ 'ilme lenâ illâ mâ 'allemtenâ</a>
+bize öğrettiğinden başka bilgimiz yoktur
 <a name="v=2:102&r=Elm&r=sHr">yu'allimûnen-nâses-sihr(e)</a>
+insanlara sihir öğretiyorlardı
 <a name="v=2:102&r=Elm&r=Drr">veyeta'allemûne mâ yadurruhum</a>
+zarar verecek (şeyler) öğreniyorlardı
 </pre>
 
 <b>qadera: taqdîr, iqtidâr</b> &emsp; (qdr)
 <pre>
 <a name="v=77:23&r=qdr">feqadernâ feni'mel-qâdirûn(e)</a>
+bir ölçüyle yaptık, ne güzel ölçü koyanlarız!
 <a name="v=25:2&r=qdr">vehalaqa kulle şey-in veqadderahû taqdîrâ</a>
+her şeyi yaratıp bir ölçüye göre takdir etti
 <a name="v=54:55&r=qdr">fî maq'adi sidqin 'inde melîkin muqtedir</a>
+Güçlü Melikin huzurunda, doğruluk tahtında
 </pre>
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CHQAdC8Pyb4" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe> -->
+</iframe>
 </p>
     <script src="init.js"></script>
   </body>
