--- a/rama/azmil.html
+++ b/rama/azmil.html
@@ -45,7 +45,7 @@ her ikisi de 'ayn sesi ile başlar.
 </p>
 <figure>
   <img alt="Şura suresinden bir ayet"
-       src="../icon/min azmil-umur.jpg"" />
+       src="min azmil-umur.jpg"" />
   <figcaption class="center">
     <b class=ayet>zâlike min azmil-umûr</b>
   </figcaption>
