--- a/rama/kufur.html
+++ b/rama/kufur.html
@@ -20,7 +20,7 @@
 diye beni sınamak için..."</i>
 </div>
 <br><br>
-<img src="../icon/minfadliRabbi.jpg" /> 
+<img src="minfadliRabbi.jpg" /> 
 <!-- src="https://1.bp.blogspot.com/-Mkh3BnbfvDA/XqP3AnZsYxI/AAAAAAAAbIU/tcTsOPSHCRcE2LhKTgVFhDFY6icujcsXwCEwYBhgL/s1600/min%2Bfadli%2Brabbi.jpg"-->
 <div class="center">
   <a href="http://www.ozcay.com/mehmed/galeri#94" target="Kuran">Mehmed Özçay</a> 
