--- a/rama/sidq.html
+++ b/rama/sidq.html
@@ -26,7 +26,7 @@ Ona ve çocuklarına bu ayrıcalık verilmiş.<br>
 19:50 <b>veca'alnâ lehum <a name="v=19:50&r=lsn&r=Sdq">lisâne sidqin</a> 'aliyyâ</b> <br>
 <i>Onlara dillerde güzel ve yüksek bir övgü verdik.</i>
 </p><br>
-<img src="../icon/sidq.jpg" />
+<img src="sidq.jpg" />
 <div class="center">
   <b>sidq:</b> harflerin bile ölçüsü var <a  target="Kuran"
   href="https://www.fatemidawat.com/teachings/our-identity/imaan-belief-and-truthfulness-who-should-you-believe-and-why"></a>
