--- a/ders/07.html
+++ b/ders/07.html
@@ -68,7 +68,7 @@ Güçlü Melikin huzurunda, doğruluk tahtında
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/CHQAdC8Pyb4" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/J6joMcCaDrw" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
 </iframe>
