--- a/ders/index.html
+++ b/ders/index.html
@@ -18,12 +18,13 @@
 <p>Dersler:</p>
 <ol>
   <li><a href="01.html">İsimler</a></li>
-  <li><a href=02.html>Cümle yapısı</a></li>
-  <li><a href=03.html>Sıfat ve zamirler</a></li>
-  <li><a href=04.html>Tekil, ikil, çoğul</a></li>
+  <li><a href="02.html">Cümle yapısı</a></li>
+  <li><a href="03.html">Sıfat ve zamirler</a></li>
+  <li><a href="04.html">Tekil, ikil, çoğul</a></li>
   <li><a href="05.html">Sayılar</a></li>
   <li><a href="06.html">Fiil çekimi</a></li>
   <li><a href="07.html">Kelime türetme</a></li>
+  <li><a href="sunum4.2.html">Sunum V4.2</a></li>
 </ol>
 
 <!-- <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p> -->
