--- a/ders/index.html
+++ b/ders/index.html
@@ -25,6 +25,7 @@
   <li><a href="06.html">Fiil çekimi</a></li>
   <li><a href="07.html">Kelime türetme</a></li>
   <li><a href="sunum4.2.html">Sunum V4.2</a></li>
+  <li><a href="yaygin.html">Sık geçen kelimeler</a></li>
 </ol>
 
 <!-- <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p> -->
