--- a/ders/sunum4.2.html
+++ b/ders/sunum4.2.html
@@ -50,10 +50,10 @@
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4-X2v7oF73c" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe> -->
+</iframe>
 </p>
     <script src="init.js"></script>
   </body>
