--- a/ders/yaygin.html
+++ b/ders/yaygin.html
@@ -37,7 +37,7 @@
   <body>
 <h2>Sık geçen kelimeler &emsp; <button class=goBack>◀</button></h2>
 
-<p>Kuran-ı Kerim'de en sık (bütün türevleri ile en az 100 kere) kullanılan kelime kökleri aşağıdaki tabloda görülüyor. Tabloda bir köke tıklayınca, o kökten türemiş bütün kelimeler Mucem yazılımında açılır. Anlam sütununda ise, Türkçe'ye geçmiş kelimelere tıklayınca birer örnek ayet gösterilir.</p>
+<p>Kuran-ı Kerim'de en sık (bütün türevleri ile en az 100 kere) kullanılan kelime kökleri aşağıdaki tabloda görülüyor. Tabloda Arapça bir köke tıklayınca, o kökten türemiş bütün kelimeler Mucem yazılımında açılır. Anlam sütununda ise, Türkçe'ye geçmiş kelimelere tıklayınca, her kelime için birer örnek ayet gösterilir.</p>
 
 <table id=tablo></table>
 
@@ -46,7 +46,7 @@
 </p>
 <p><img src="./Eylul 2001.jpg">
 Bu çalışma 2001'de kağıt üzerinde yapılırken günlerce sürmüştü. 
-Mucem verileri ile birkaç saatte tamamlandı...</p>
+Mucem verileri ile birkaç saatte tamamlandı... Türkçe kelimelerin ayetlerini seçmek ve linklerini eklemek otomatik yapılamadığı için bir hafta sürdü.</p>
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
@@ -112,60 +112,60 @@ const DATA =
 ضلل	191	<a name="v=4:44&r=Dll">Dalalet,</a> sapmak.
 سمع	185	Duymak, kulak vermek.
 بني	184	Oğul, çocuk.
-حيي	184	Diriltmek. <a name="v=:&r=">Hayat.</a>
-خرج	182	Çıkmak. <a name="v=:&r=">Hariç,</a> <a name="v=:&r=">ihraç.</a>
-صلح	180	<a name="v=:&r=">Salih</a> (cins ve özel isim)
-سبل	176	Yol. <a name="v=:&r=">Sebil.</a>
-تبع	172	Uymak, <a name="v=:&r=">tâbi</a> olmak. Peşpeşe.
-قتل	170	Öldürmek, savaşmak. <a name="v=:&r=">Katil.</a>
-اول	170	Aile. Birinci, <a name="v=:&r=">evvel.</a> Tevil.
-مثل	169	Benzetmek. <a name="v=:&r=">Misal.</a>
-قلب	168	Çevirmek. <a name="v=:&r=">Kalp.</a>
-شرك	168	Ortak, <a name="v=:&r=">şirk.</a>
+حيي	184	Diriltmek. <a name="v=2:179&r=Hyy">Hayat.</a>
+خرج	182	Çıkmak. <a name="v=6:122&r=xrj">Hariç,</a> <a name="v=71:18&r=xrj">ihraç.</a>
+صلح	180	<a name="v=26:142&r=SlH">Salih</a> (cins ve özel isim)
+سبل	176	Yol. <a name="v=40:38&r=sbl">Sebil.</a>
+تبع	172	Uymak, <a name="v=2:145&r=tbE">tâbi</a> olmak. <a name="v=14:21&r=tbE">Tebâ.</a> Peşpeşe.
+قتل	170	Öldürmek, savaşmak. <a name="v=5:30&r=qtl">Katl.</a>
+اول	170	Aile. Birinci, <a name="v=57:3&r=Awl">evvel.</a> <a name="v=3:7&r=Awl">Tevil.</a>
+مثل	169	Benzetmek. <a name="v=7:176&r=mvl">Mesel.</a>
+قلب	168	Çevirmek. <a name="v=26:89&r=qlb">Kalp.</a>
+شرك	168	Ortak, <a name="v=31:13&r=$rk">şirk.</a>
 سوا	167	Kötü.
-كثر	167	Çok. Çoğalmak. <a name="v=:&r=">Kesret.</a>
-موت	165	Ölüm. <a name="v=:&r=">Mevt, mevta.</a>
-كبر	161	Büyük, yaşlı. <a name="v=:&r=">Tekbir,</a> <a name="v=:&r=">kibir.</a>
-نبا	160	Haber vermek, bildirmek. Haber, <a name="v=:&r=">nebi.</a>
-شهد	160	<a name="v=:&r=">Şahit</a> olmak. <a name="v=:&r=">Şehit.</a>
+كثر	167	Çok. Çoğalmak. <a name="v=5:100&r=kvr">Kesret.</a>
+موت	165	Ölüm. <a name="v=21:35&r=mwt">Mevt,</a> <a name="v=6:162&r=mwt">memât.</a>
+كبر	161	Büyük, yaşlı. <a name="v=17:111&r=kbr">Tekbir,</a> <a name="v=40:56&r=kbr">kibir.</a>
+نبا	160	Haber vermek, bildirmek. Haber, <a name="v=33:45&r=nbA">nebi.</a>
+شهد	160	<a name="v=33:45&r=$hd">Şahit</a> olmak, <a name="v=24:6&r=$hd">şehadet.</a> <a name="v=5:8&r=$hd">Şehit.</a>
 نصر	158	Yardım.
-بعض	158	Bir kısım, <a name="v=:&r=">bazı.</a>
-صدق	155	Doğruluk. <a name="v=:&r=">Tasdik. Sadaka.</a>
-غير	154	<a name="v=:&r=">Gayrı,</a> başka. Değişmek.
-وعد	151	<a name="v=:&r=">Vaad.</a>
-رود	148	<a name="v=:&r=">İrade. Murad.</a> Düzen kurmak.
-بصر	148	Bakmak. <a name="v=:&r=">Basiret.</a> Aydınlatan.
-اله	147	<a name="v=:&r=">İlah,</a> tanrı (cins isim)
+بعض	158	Bir kısım, <a name="v=8:74&r=bED">bazı.</a>
+صدق	155	Doğruluk. <a name="v=10:37&r=Sdq">Tasdik.</a> <a name="v=2:263&r=Sdq">Sadaka.</a>
+غير	154	<a name="v=1:7&r=gyr">Gayrı,</a> başka. Değişmek.
+وعد	151	<a name="v=35:5&r=wEd">Vaad.</a>
+رود	148	İrade. Murad. Düzen kurmak.
+بصر	148	Bakmak. <a name="v=6:104&r=bSr">Basiret.</a> Aydınlatan.
+اله	147	<a name="v=18:110&r=Alh">İlah,</a> tanrı (cins isim)
 لقي	146	Karşılaşmak.
 دون	144	Aşağı.
-سلم	140	Barış, <a name="v=:&r=">selam, teslim.</a>
-نعم	140	<a name="v=:&r=">Nimet.</a> Ahır hayvanı.
-مُوسَىٰ	136	<a name="v=:&r=">Musa</a> (özel isim)
-دنو	133	Yakın/aşağı olmak. <a name="v=:&r=">Dünya.</a>
-قدر	132	Ayarlamak, kısıtlamak. <a name="v=:&r=">Kader.</a> <a name="v=:&r=">Miktar.</a>
-نذر	130	Uyarmak. <a name="v=:&r=">Nezir,</a> adak.
-سال	129	Sormak. <a name="v=:&r=">Sual.</a>
-نظر	129	Bakmak. Beklemek, gözlemek. <a name="v=:&r=">Nazar.</a>
-جمع	129	Toplamak. <a name="v=:&r=">Cuma.</a>
+سلم	140	<a name="v=2:128&r=slm">İslam.</a> Barış, <a name="v=39:73&r=slm">selam,</a> <a name="v=33:56&r=slm">teslim.</a>
+نعم	140	<a name="v=93:11&r=nEm">Nimet.</a> Ahır hayvanı.
+مُوسَىٰ	136	<a name="v=10:80&r=muwsaY%60">Musa</a> (özel isim)
+دنو	133	Yakın/aşağı olmak. <a name="v=41:31&r=dnw">Dünya.</a>
+قدر	132	Ayarlamak, kısıtlamak. <a name="v=23:18&r=qdr">Kader.</a> <a name="v=70:4&r=qdr">Miktar.</a>
+نذر	130	Uyarmak. <a name="v=76:7&r=n*r">Nezir,</a> adak.
+سال	129	Sormak. <a name="v=20:36&r=sAl">Sual.</a> <a name="v=17:36&r=sAl">Mes'ûl.</a>
+نظر	129	Bakmak. Beklemek, gözlemek. Nazar.
+جمع	129	Toplamak. <a name="v=62:9&r=jmE">Cuma.</a>
 طوع	129	İsteyerek yapmak. Gücü yetmek.
-عظم	128	<a name="v=:&r=">Azim,</a> yüce. Kemik.
-خلف	127	Ardından gelmek. <a name="v=:&r=">Halef. Muhtelif.</a>
+عظم	128	<a name="v=24:16&r=EZm">Azim,</a> yüce. Kemik.
+خلف	127	Ardından gelmek. Halef. <a name="v=35:27&r=xlf">Muhtelif.</a>
 اهل	127	Ev halkı.
-دخل	126	Girmek. <a name="v=:&r=">Dahil.</a>
+دخل	126	Girmek. <a name="v=5:22&r=dxl">Dahil.</a>
 خوف	124	Korkmak.
-رزق	123	<a name="v=:&r=">Rızık. Rezzak.</a>
-بشر	123	Müjde. <a name="v=:&r=">Beşer.</a>
+رزق	123	<a name="v=67:21&r=rzq">Rızık.</a> <a name="v=51:58&r=rzq">Rezzak.</a>
+بشر	123	Müjde. <a name="v=15:33&r=b$r">Beşer.</a>
 يدي	120	El.
-عزز	119	<a name="v=:&r=">Aziz,</a> üstün.
-امم	119	Yönelmek. Anne, <a name="v=:&r=">ümmi. İmam,</a> önder.
-جزي	118	Karşılık, <a name="v=:&r=">ceza.</a>
-ابو	117	Baba, <a name="v=:&r=">ebeveyn,</a> ana-baba.
-نهر	113	<a name="v=:&r=">Nehir.</a>
-نفق	111	Harcamak. <a name="v=:&r=">İnfak.</a> <a name="v=:&r="> Nifak.</a>
-حسب	109	<a name="v=:&r=">Hesap,</a> zan.
+عزز	119	<a name="v=3:6&r=Ezz">Aziz,</a> üstün.
+امم	119	<a name="v=2:128&r=Amm">Ümmet.</a>. Anne, <a name="v=7:158&r=Amm">ümmi.</a> <a name="v=25:74&r=Amm">İmam,</a> önder.
+جزي	118	Karşılık, <a name="v=98:8&r=jzy">ceza.</a>
+ابو	117	Baba, <a name="v=12:99&r=Abw">ebeveyn,</a> ana-baba.
+نهر	113	<a name="v=2:249&r=nhr">Nehir.</a>
+نفق	111	Harcamak. <a name="v=17:100&r=nfq">İnfak.</a> <a name="v=9:97&r=nfq"> Nifak.</a>
+حسب	109	<a name="v=21:1&r=Hsb">Hesap,</a> zan.
 اكل	109	Yemek, yemiş.
-فعل	108	Yapmak, <a name="v=:&r=">fiil.</a>
-اجر	108	<a name="v=:&r=">Ücret. Ecir.</a>
+فعل	108	Yapmak, <a name="v=21:73&r=fEl">fiil.</a>
+اجر	108	<a name="v=28:25&r=Ajr">Ücret. Ecir.</a>
 وجد	107	Bulmak.
 عدو	106	Haddi aşmak. Düşman.
 رجع	104	Dönmek. <a name="v=86:11&r=rjE">Rücû.</a>
